--- a/ConnectMedia/Views/Shared/_WebviewLayoutmenu.cshtml
+++ b/ConnectMedia/Views/Shared/_WebviewLayoutmenu.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/assets/images/favicon.png">
     <!-- Bootstrap Core CSS -->
     <link href="~/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/assets/plugins/prism/prism.css" rel="stylesheet">
@@ -65,25 +65,8 @@
         $('.carousel').carousel({
             interval: 3000
         });
-        $(document).ready(function () {
-            $("#newsiframe").contents().find("#header-ad-wrapper").remove();
-        });
-        
     </script>
 
-    <script type="text/javascript">
 
-        jQuery(function () {
-
-            var f = jQuery('iframe')
-
-            f.load(function () {
-
-                f.contents().find('.mast').hide();
-
-            })
-
-        })
-    </script>
 </body>
 </html>
