--- a/ConnectMedia/Views/Shared/_Layout.cshtml
+++ b/ConnectMedia/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
         <link href="~/css/steps-css/main.css" rel="stylesheet">
         <link href="~/css/steps-css/jquery.steps.css" rel="stylesheet">*@
 
+    <link href="~/css/stepform2.css" rel="stylesheet">
     <link href="~/css/connectmedia.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -32,7 +33,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Start of  Zendesk Widget script -->
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=1127fd0c-b73e-4d20-8e05-36a36ed244c3"></script>
+    @*<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=1127fd0c-b73e-4d20-8e05-36a36ed244c3"></script>*@
     <!-- End of  Zendesk Widget script -->
 
 </head>
@@ -109,6 +110,7 @@
     <!-- Sweet-Alert  -->
     <script src="~/assets/plugins/sweetalert/sweetalert.min.js"></script>
     <script src="~/assets/plugins/wizard/steps.js"></script>
+    <script src="~/js/stepform2.js"></script>
     <!-- wysuhtml5 Plugin JavaScript -->
     @*<script src="~/assets/plugins/tinymce/tinymce.min.js"></script>*@
     <script src="~/tinymce/tinymce.min.js"></script>
